fix RES image to go in front of sidebar instead of behind.

--- a/css/REShacks.scss
+++ b/css/REShacks.scss
@@ -248,4 +248,7 @@ a[title="Nuke!"] {
 
 .content .RES-keyNav-activeElement, .content .commentarea .RES-keyNav-activeElement .md, .content .commentarea .RES-keyNav-activeElement.entry .noncollapsed {background-color:transparent !important;}
 
+
+.RESImage.loaded {z-index:99999;}
+
 /** +++ RES HACKS ENDS +++ **/
